# Boids-2D

./: .gitignore  Boids  CMakeCache.txt  CMakeLists.txt  Makefile  README.md  main.cpp
glad/include/glad/: glad.h
glad/src/: glad.c
src/: Boid.cpp  Boid.hpp  Core.cpp  Core.hpp  Exception.hpp  Utils.cpp  Utils.hpp  boid.comp  boid.fs  boid.vs  boid_flocking.comp  boid_hashing.comp
